2022-06-17 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjust some log messages
	* Update aide.conf.5 manual page
	* Fix compiler warnings and clean up code

2022-06-16 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add prefix option to directory include macros (closes: #112)

2022-06-15 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add `report_format` option (closes: #18)
	  - available formats: `plain`, `json`

2022-04-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix memory leak on errors during hash calculation (closes: #125)

2022-02-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix handling of duplicate database entries (closes: #122)

2022-02-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix compiler warnings and clean up code

2022-02-12 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Clean up #include statements

2022-01-19 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Precalculate buffer size in base64 functions (CVE-2021-45417),
	  thanks to David Bouman for reporting this issue

2022-01-18 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Handle malformed database lines (closes: #122)
	* Always add size attribute to database if growing size group
	  is set (closes: #121)

2021-12-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Improve error message during config parsing (closes: #119)

2021-12-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add 'database_in' examples to manual page (closes: #31)
	* Enable dynamic linking by default (closes: #94,  #96, #109)

2021-12-03 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix autoconf warnings

2021-12-02 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove re-introduced bashism in configure.ac

2021-12-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Switch from PCRE to PCRE2 (closes: #116)

2021-11-14 Jason Pyeron <jpyeron@pdinc.us>
	* Add missing config.h include (closes: #104)

2021-11-07 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Remove bashism in configure.ac
