@@ -5,6 +5,8 @@ G	[a-zA-Z0-9]
 V	[a-zA-Z_]+[a-zA-Z0-9_]*
 E	[\ ]*"="[\ ]*
 
+O	[a-z_]
+
 %{
 
 #define YYDEBUG 1
@@ -470,6 +472,11 @@ LOG_LEVEL lex_log_level = LOG_LEVEL_CONFIG;
   conflval.option = CONFIG_CHECK_WARN_UNRESTRICTED_RULES;
   BEGIN (STRINGEQHUNT);
   return (CONFIGOPTION);
+}
+
+<CONFIG>({O})+ {
+  log_msg(LOG_LEVEL_ERROR,"%s:%d: unknown config option: '%s' (line: '%s')", conf_filename, conf_linenumber, conftext, conf_linebuf);
+  exit(INVALID_CONFIGURELINE_ERROR);
 }
 
 <CONFIG>({G})+ { /* group definition */
